# omrsheet-read-poc

./: README.md  cordinate_helper.py  helper.py  main.py  pyproject.toml  sizecheck.py  utils.py
response/: api.py  omr_data.json
