[tool.poetry]
name = "omrpoc"
version = "0.1.0"
description = ""
authors = ["vishal-PTF <vishal.v@thepioneerfuture.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
numpy = "^2.0.1"
pytesseract = "^0.3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
